--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,13 +15,17 @@ License: MIT + file LICENSE
 URL: https://uribo.github.io/suryulib/, https://github.com/uribo/suryulib
 BugReports: https://github.com/uribo/suryulib/issues
 Imports:
-  dplyr,
-  ggplot2,
-  grDevices,
-  rlang,
-  sessioninfo
+    dplyr,
+    ggplot2,
+    grDevices,
+    purrr,
+    rlang,
+    sessioninfo,
+    tibble,
+    magrittr
 Suggests: 
     devtools,
+    moments,
     testthat,
     usethis
 Encoding: UTF-8
