--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,8 @@ License: MIT + file LICENSE
 URL: https://uribo.github.io/suryulib/, https://github.com/uribo/suryulib
 BugReports: https://github.com/uribo/suryulib/issues
 Imports:
+    cli,
+    glue,
     dplyr,
     ggplot2,
     grDevices,
