--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,6 +16,7 @@ URL: https://uribo.github.io/suryulib/, https://github.com/uribo/suryulib
 BugReports: https://github.com/uribo/suryulib/issues
 Imports:
     cli,
+    clipr,
     glue,
     dplyr,
     ggplot2,
@@ -33,4 +34,4 @@ Suggests:
     usethis
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
