--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,10 +17,12 @@ BugReports: https://github.com/uribo/suryulib/issues
 Imports:
     cli,
     clipr,
+    gibasa,
     glue,
     dplyr,
     ggplot2,
     grDevices,
+    htmltools,
     httr,
     purrr,
     rlang,
@@ -32,6 +34,8 @@ Suggests:
     moments,
     testthat,
     usethis
+Remotes:
+  paithiov909/gibasa
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.0
