--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export("%>%")
 export(convert_notionapp_link)
+export(detect_tweet_latest_since_id)
 export(get_openbd)
 export(html_yomi)
 export(jpfont)
@@ -11,6 +12,7 @@ export(scale_color_ds)
 export(scale_fill_ds)
 export(summary_df)
 export(theme_ds_dark)
+export(write_search_tweets_rds)
 importFrom(ggplot2,discrete_scale)
 importFrom(ggplot2,scale_color_gradientn)
 importFrom(grDevices,colorRampPalette)
