[add]queryごとに出力したrdsから最新のsince_idの値をcsvとして保存

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(scale_fill_ds)
 export(summary_df)
 export(theme_ds_dark)
 export(write_search_tweets_rds)
+export(write_twitter_query_status)
 importFrom(ggplot2,discrete_scale)
 importFrom(ggplot2,scale_color_gradientn)
 importFrom(grDevices,colorRampPalette)
